responsive revus sans media 'footer pas commencer' responsive loin d'etre fini

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             <h2 id="related-heading">Collections Connexes.</h2>
             <p>Les montres du même style que vous devriez apprécier</p>
         </div>
-        <ul class="horizontal-list horizontal-list-justify">
+        <ul class="horizontal-list">
             <li>
                 <article aria-labelledby="rel-1" class="watch-card card">
                     <img src="./src/img/desktop/quantieme-Perpetuel-desktop.webp" alt="Quantième Perpétuel"
@@ -558,7 +558,7 @@
                  loading="lazy" decoding="async">
         </div>
         <div class="inner-spacer" id="history-content">
-            <div>
+            <div class="null-spacer-for-mobile">
                 <h2 id="history-heading">Une Révolution Esthétique</h2>
                 <p>Dessinée par Gérald Genta, la Royal Oak tire son succès de son esthétique révolutionnaire qui a brisé
                     les
