--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
           content="Découvrez la Royal Oak Quantième Perpétuel (Ref. 26574TI). Une montre d'exception en titane de 41 mm, dotée du Calibre 5134 extra-plat.">
     <script async src="src/js/main.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
 
 </head>
 <body>
 
-<a href="#main-content" class="skip-link visually-hidden">Aller au contenu principal
-    <span>(s'ouvre dans un nouvel onglet)</span>
-</a>
+<nav aria-label="Accès rapide">
+    <a class="skip-link" href="#main-content">
+        Aller au contenu principal
+    </a>
+</nav>
 
 <header>
     <p class="brand-name">Royal Oak</p>
@@ -70,7 +71,7 @@
                     </strong>
                 </p>
             </div>
-            <div class="buttons-group">
+            <div class="buttons-group second-spacer-desktop">
                 <a class="button button-primary"
                    href="https://www.audemarspiguet.com/com/fr/watch-collection.html?view=core-collection&collection=COL_017%2CCOL_019%2CCOL_018"
                    target="_blank" rel="noopener noreferrer" hreflang="fr">Changer de modèle
@@ -558,7 +559,7 @@
                  loading="lazy" decoding="async">
         </div>
         <div class="inner-spacer" id="history-content">
-            <div class="null-spacer-for-mobile">
+            <div class="variable-spacer-for-no-space-mobile">
                 <h2 id="history-heading">Une Révolution Esthétique</h2>
                 <p>Dessinée par Gérald Genta, la Royal Oak tire son succès de son esthétique révolutionnaire qui a brisé
                     les
@@ -792,7 +793,7 @@
                 <li>
                     <a class="button-primary-inverse-social button" href="https://www.facebook.com/audemarspiguet"
                        target="_blank" rel="noopener noreferrer">
-                    <span class="icon" aria-hidden="true">
+                    <span class="button-icon" aria-hidden="true">
                         <svg width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M11.4951 9.23078H13.9351V6.79079C13.9351 6.37079 13.9918 5.96079 14.1051 5.56079C14.2385 5.13412 14.4351 4.73412 14.6951 4.36079C15.0285 3.90079 15.4618 3.56745 15.9951 3.36079C16.6301 3.10515 17.3108 2.98262 17.9951 3.00079H20.4551V6.11079H18.3351C18.0618 6.11079 17.8051 6.18079 17.5651 6.32079C17.3151 6.45079 17.1651 6.72079 17.1851 7.00079V9.23078H20.5051L19.9951 12.4408H17.1851V21.0008H13.9151V12.4408H11.4951V9.23078Z"
                                   fill="currentColor"/>
@@ -805,7 +806,7 @@
                 <li>
                     <a class="button-primary-inverse-social button" href="https://www.instagram.com/audemarspiguet/"
                        target="_blank" rel="noopener noreferrer">
-                    <span class="icon" aria-hidden="true">
+                    <span class="button-icon" aria-hidden="true">
                         <svg width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M16 4.62C13.6 4.62 13.31 4.62 12.36 4.68C11.7925 4.69167 11.2312 4.79988 10.7 5C10.324 5.15644 9.98372 5.3878 9.7 5.68C9.4 5.96 9.17667 6.29333 9.03 6.68C8.83218 7.21491 8.72733 7.77973 8.72 8.35V15.62C8.72 16.1933 8.81333 16.7533 9 17.3C9.15333 17.68 9.37667 18.0133 9.67 18.3C9.95667 18.6 10.29 18.8267 10.67 18.98C11.2033 19.18 11.7567 19.28 12.33 19.28C13.33 19.33 13.57 19.34 15.97 19.34C18.37 19.34 18.66 19.34 19.61 19.28C20.1833 19.28 20.74 19.18 21.28 18.98C21.6671 18.8337 22.0197 18.609 22.3157 18.3198C22.6117 18.0307 22.8447 17.6835 23 17.3C23.1978 16.7651 23.3027 16.2003 23.31 15.63C23.31 14.63 23.36 14.4 23.36 11.99C23.36 9.58 23.36 9.31 23.31 8.36C23.31 7.78667 23.2067 7.23 23 6.69C22.8491 6.30753 22.6213 5.96016 22.3306 5.66944C22.0398 5.37872 21.6925 5.15086 21.31 5C20.77 4.8 20.2133 4.7 19.64 4.7C18.69 4.63 18.4 4.62 16 4.62ZM16 3C18.45 3 18.75 3 19.71 3.06C20.4633 3.07333 21.1933 3.21 21.9 3.47C22.4973 3.70113 23.0398 4.05445 23.4927 4.50733C23.9455 4.96022 24.2989 5.50268 24.53 6.1C24.7967 6.80667 24.9333 7.53667 24.94 8.29C24.94 9.29 25 9.55 25 12C25 14.45 25 14.75 24.94 15.71C24.9211 16.4572 24.7827 17.1966 24.53 17.9C24.2989 18.4973 23.9455 19.0398 23.4927 19.4927C23.0398 19.9455 22.4973 20.2989 21.9 20.53C21.1933 20.7967 20.4633 20.9333 19.71 20.94C18.71 20.94 18.45 21 16 21C13.55 21 13.25 21 12.29 20.94C11.5428 20.9211 10.8034 20.7827 10.1 20.53C9.50268 20.2989 8.96022 19.9455 8.50733 19.4927C8.05445 19.0398 7.70113 18.4973 7.47 17.9C7.20333 17.1933 7.06667 16.4633 7.06 15.71C7 14.75 7 14.45 7 12C7 9.55 7 9.25 7.06 8.29C7.07333 7.54333 7.21 6.81667 7.47 6.11C7.68333 5.50333 8.01667 4.97 8.47 4.51C8.93 4.06333 9.46 3.73 10.06 3.51C10.7667 3.25667 11.4967 3.12 12.25 3.1C13.25 3 13.55 3 16 3ZM16 7.38C17.2253 7.38 18.4004 7.86675 19.2668 8.73317C20.1333 9.59958 20.62 10.7747 20.62 12C20.62 13.2253 20.1333 14.4004 19.2668 15.2668C18.4004 16.1333 17.2253 16.62 16 16.62C15.3933 16.62 14.7925 16.5005 14.232 16.2683C13.6715 16.0361 13.1622 15.6958 12.7332 15.2668C12.3042 14.8378 11.9639 14.3285 11.7317 13.768C11.4995 13.2075 11.38 12.6067 11.38 12C11.38 11.3933 11.4995 10.7925 11.7317 10.232C11.9639 9.67148 12.3042 9.16217 12.7332 8.73317C13.1622 8.30416 13.6715 7.96385 14.232 7.73168C14.7925 7.4995 15.3933 7.38 16 7.38ZM16 15C16.7956 15.0133 17.564 14.7099 18.136 14.1567C18.708 13.6034 19.0367 12.8456 19.05 12.05C19.0633 11.2544 18.7599 10.486 18.2067 9.91403C17.6534 9.34205 16.8956 9.01326 16.1 9C15.3044 8.98674 14.536 9.29009 13.964 9.84332C13.392 10.3966 13.0633 11.1544 13.05 11.95C13.0367 12.7456 13.3401 13.514 13.8933 14.086C14.4466 14.658 15.2044 14.9867 16 15ZM21.89 7.19C21.89 7.47643 21.7762 7.75114 21.5737 7.95368C21.3711 8.15621 21.0964 8.27 20.81 8.27C20.5236 8.27 20.2489 8.15621 20.0463 7.95368C19.8438 7.75114 19.73 7.47643 19.73 7.19C19.73 6.90357 19.8438 6.62886 20.0463 6.42632C20.2489 6.22379 20.5236 6.11 20.81 6.11C21.0964 6.11 21.3711 6.22379 21.5737 6.42632C21.7762 6.62886 21.89 6.90357 21.89 7.19Z"
                                   fill="currentColor"/>
@@ -818,7 +819,7 @@
                 <li>
                     <a class="button-primary-inverse-social button" href="https://www.pinterest.com/audemarspiguet"
                        target="_blank" rel="noopener noreferrer">
-                    <span class="icon" aria-hidden="true">
+                    <span class="button-icon" aria-hidden="true">
                         <svg width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M11.1671 4.97761C11.8577 4.29845 12.6818 3.77002 13.5872 3.42576C14.4926 3.0815 15.4596 2.9289 16.4271 2.97761C18.1271 2.91761 19.7871 3.55761 20.9971 4.74761C21.569 5.28851 22.0204 5.9439 22.322 6.67104C22.6235 7.39817 22.7684 8.18071 22.7471 8.96761C22.8219 10.7895 22.2948 12.5853 21.2471 14.0776C20.8094 14.7013 20.2266 15.2093 19.5489 15.5577C18.8712 15.9061 18.119 16.0845 17.3571 16.0776C16.8237 16.0776 16.3271 15.9476 15.8671 15.6876C15.4604 15.4876 15.1437 15.1876 14.9171 14.7876C14.9171 14.9209 14.6704 15.8609 14.1771 17.6076C13.7904 18.8609 13.1937 19.9976 12.3871 21.0176C12.339 21.0371 12.2852 21.0371 12.2371 21.0176C12.2141 21.0129 12.1936 21.0004 12.179 20.9821C12.1643 20.9638 12.1566 20.941 12.1571 20.9176C11.9199 19.615 11.9199 18.2802 12.1571 16.9776L13.4871 11.3876L13.4071 11.1876C13.3004 11.0076 13.2371 10.8143 13.2171 10.6076C13.1656 10.3238 13.1389 10.036 13.1371 9.74761C13.1171 9.07761 13.3171 8.40761 13.6971 7.85761C13.9971 7.38761 14.5171 7.09761 15.0771 7.08761C15.4571 7.06761 15.8271 7.23761 16.0771 7.52761C16.3171 7.84761 16.4337 8.21427 16.4271 8.62761C16.4271 8.96094 16.3737 9.29427 16.2671 9.62761L15.8771 11.0076L15.5271 12.2776C15.3871 12.7576 15.5071 13.2776 15.8271 13.6776C16.1471 14.0576 16.6271 14.2676 17.1271 14.2476C18.1271 14.2076 19.0271 13.5876 19.4071 12.6576C20.0371 11.4576 20.3471 10.1276 20.3071 8.77761C20.3233 8.24866 20.2345 7.72174 20.0457 7.22737C19.8569 6.73301 19.5718 6.28102 19.2071 5.89761C18.7921 5.51635 18.3047 5.22248 17.7739 5.0335C17.243 4.84452 16.6796 4.7643 16.1171 4.79761C15.4567 4.77618 14.7992 4.89424 14.1875 5.14409C13.5758 5.39394 13.0236 5.76995 12.5671 6.24761C11.6671 7.18761 11.1671 8.44761 11.1871 9.74761C11.1671 10.4676 11.4071 11.1776 11.8471 11.7476C11.9971 11.8876 12.0671 12.1076 12.0071 12.3076C11.9532 12.4364 11.913 12.5705 11.8871 12.7076C11.8471 12.8543 11.8204 13.0009 11.8071 13.1476C11.8029 13.2037 11.7839 13.2577 11.7522 13.3041C11.7205 13.3505 11.6771 13.3878 11.6264 13.4121C11.5757 13.4365 11.5195 13.447 11.4635 13.4427C11.4074 13.4384 11.3535 13.4194 11.3071 13.3876C10.6261 13.095 10.0775 12.5607 9.76707 11.8876C9.40912 11.1248 9.23121 10.29 9.24707 9.44761C9.26707 7.75761 9.95707 6.14761 11.1671 4.97761Z"
                                   fill="currentColor"/>
@@ -831,7 +832,7 @@
                 <li>
                     <a class="button-primary-inverse-social button" href="https://www.youtube.com/user/aptvofficial"
                        target="_blank" rel="noopener noreferrer">
-                    <span class="icon" aria-hidden="true">
+                    <span class="button-icon" aria-hidden="true">
                         <svg width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M24.82 8.59C24.7302 7.97388 24.4821 7.39159 24.1 6.9C23.6113 6.4418 22.9698 6.18161 22.3 6.17C19.78 6 16 6 16 6C16 6 12.22 6 9.7 6.17C9.03 6.17 8.38 6.44 7.89 6.9C7.5074 7.39025 7.26232 7.97359 7.18 8.59C7.07333 9.51 7.01333 10.43 7 11.35V12.64C7 13.5733 7.06 14.4967 7.18 15.41C7.27333 16.0367 7.51333 16.6 7.9 17.1C8.46 17.57 9.17 17.83 9.9 17.83C11.32 18 16 18 16 18C16 18 19.78 18 22.3 17.82C22.97 17.82 23.61 17.56 24.1 17.1C24.4867 16.6 24.7267 16.0367 24.82 15.41C24.9267 14.49 24.9867 13.5667 25 12.64V11.35C25 10.43 24.94 9.51 24.82 8.59ZM14.14 14.21V9.42L19 11.82L14.14 14.21Z"
                                   fill="currentColor"/>
@@ -844,7 +845,7 @@
                 <li>
                     <a class="button-primary-inverse-social button" href="https://x.com/AudemarsPiguet" target="_blank"
                        rel="noopener noreferrer">
-                    <span class="icon" aria-hidden="true">
+                    <span class="button-icon" aria-hidden="true">
                         <svg width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M17.7002 10.6L24.2002 3H22.6002L17.0002 9.6L12.4002 3H7.2002L14.1002 13L7.2002 21H8.8002L14.8002 14L19.6002 21H24.8002L17.7002 10.6ZM9.3002 4.2H11.7002L22.7002 19.9H20.3002L9.3002 4.2Z"
                                   fill="currentColor"/>
@@ -857,7 +858,7 @@
                 <li>
                     <a class="button-primary-inverse-social button"
                        href="https://ch.linkedin.com/company/audemarspiguet" target="_blank" rel="noopener noreferrer">
-                    <span class="icon" aria-hidden="true">
+                    <span class="button-icon" aria-hidden="true">
                         <svg width="32" height="24" viewBox="0 0 32 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M7.3 9H11V21H7.3V9ZM9.2 3C10.4 3 11.4 4 11.4 5.2C11.4 6.4 10.4 7.4 9.2 7.4C8 7.3 7 6.4 7 5.2C7 4 8 3 9.2 3ZM13.4 9H17V10.6C17.7 9.3 19.1 8.6 20.5 8.7C24.3 8.7 25 11.2 25 14.4V21H21.3V15.2C21.3 13.8 21.3 12 19.4 12C17.5 12 17.2 13.5 17.2 15.1V21H13.4V9Z"
                                   fill="currentColor"/>
@@ -868,6 +869,7 @@
                     </a>
                 </li>
             </ul>
+
         </section>
     </div>
 
@@ -928,6 +930,7 @@
 
     <section aria-label="Informations légales et crédits" class="inner-spacer" id="informations">
         <div id="legal-links">
+            <!--            todo-->
             <small>
                 &copy; 2026 Audemars Piguet Holding SA. Tous droits réservés.
             </small>
