avancement BEM line 98

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
                     <span class="u-visually-hidden">(s'ouvre dans un nouvel onglet)</span>
                 </a>
             </div>
-            <p class="product-intro__description product-intro__description--secondary product-intro__description--small">
+            <p class="product-intro__description">
                 Boîte en titane, glace et fond saphir avec traitement anti-reflets.</p>
 
             <section class="tech-specs" aria-labelledby="technical-details">
                 <h2 class="tech-specs__title u-visually-hidden" id="technical-details">Détails techniques</h2>
-
+<!--todo-->
                 <div class="tech-specs__content l-container--narrow">
                     <dl class="tech-specs__list">
                         <div class="tech-specs__item">
